[gd_scene load_steps=5 format=3 uid="uid://dcf0w62ro7pat"]

[ext_resource type="Texture2D" uid="uid://ii2nrigksib7" path="res://assets/0957a9756995850.jpg" id="1_nxeut"]
[ext_resource type="Script" path="res://scripts/obstacle.gd" id="1_q2nv3"]

[sub_resource type="PackedScene" id="PackedScene_lqyut"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_orohh"]
size = Vector2(365, 365)

[node name="Obstacle" type="Sprite2D" groups=["obstacle"]]
position = Vector2(91, 36)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_nxeut")
script = ExtResource("1_q2nv3")
obstacle_scene = SubResource("PackedScene_lqyut")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["obstacle"]]
position = Vector2(2.50003, -2.5)
shape = SubResource("RectangleShape2D_orohh")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." groups=["obstacle"]]

[node name="Point_1" type="Marker2D" parent="." groups=["obstacle"]]

[node name="Point_2" type="Marker2D" parent="." groups=["obstacle"]]
position = Vector2(710, 0)

[node name="Point_3" type="Marker2D" parent="." groups=["obstacle"]]
position = Vector2(1280, 0)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
